# PCG

./: README.md
scripts/: README.md  html2md.py  json2md.py  pdf2html.py  pdf2md.py  pyproject.toml
sources/2023/: pcg_20230101.html  pcg_20230101.md  recueil_20230101.md
sources/2024/: pcg_20240101.html  pcg_20240101.md  recueil_20240101.md
sources/2025/: pcg_20250101.html  pcg_20250101.md  recueil_20250101.md
sources/2026/: pcg_20260101.html  pcg_20260101.md  recueil_20260101.md
versions/2023/: README.md  flat.json  nested.json  pcg_2023.json  pcg_2023.schema.json
versions/2024/: README.md  diff.json  flat.json  nested.json
versions/2025/: README.md  diff.json  flat.json  nested.json  pcg_2025.json
versions/2026/: README.md  diff.json  flat.json  nested.json
